# finance-manager-api

./: .dockerignore  .env.bak  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  conftest.py  db.sqlite3  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt  schema.yml
.github/: dependabot.yml
.github/workflows/: api-ci.yml
docs/: CORS_PRODUCTION_TROUBLESHOOTING.md
finance/: admin.py  apps.py  factories.py  logging_config.py  managers.py  models.py  serializers.py  services.py  signals.py  tests.py  views.py
finance/api_tools/: query_utils.py  redaction.py  serializers.py  signals.py  tos.py
finance/logic/: balance_snapshots.py  bill_recurrence.py  convert_currency.py  dashboard_layout.py  fincalc.py  grabbers.py  implementors.py  past_due_handler.py  pay_cycle.py  selectors.py  source_linkage.py  updaters.py  validators.py
finance/management/: logging_config.py  managers.py
finance/middleware/: __init__.py  db_hit_counter.py  observability.py  pwa_write_contract.py  user_log_context.py
finance/migrations/: 0001_initial.py  0002_alter_financialsnapshot_safe_to_spend_and_more.py  0002_remove_tag_unique_uuid_per_user.py  0003_alter_transaction_amount_alter_transaction_tx_type.py  0003_alter_transaction_created_on.py  (+23 more)
finance_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
hive_hub/: asgi.py  settings.py  urls.py  wsgi.py
smoke_test/: CURSOR-TEST-001.txt  SMOKE-API-001.txt  SMOKE-API-002.txt  SMOKE-API-003-SEQ.txt  SMOKE-API-REJECT-001.txt
stress_tests/: README.md  config.py  locustfile.py  seed_data.py  user_flows.py
(+169 files in other folders)
