[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-manager-api"
version = "1.2.2"
description = "Django/DRF API for Finance Manager"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "asgiref==3.11.1",
    "Babel==2.14.0",
    "currency.converter==0.5.5",
    "CurrencyConverter==0.18.14",
    "Django==6.0.1",
    "djangorestframework==3.17.1",
    "djangorestframework_simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "inflection==0.5.1",
    "loguru==0.7.3",
    "pycountry==22.3.5",
    "PyJWT==2.11.0",
    "psycopg==3.2.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "PyYAML==6.0.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "django-allauth>=65.16.1",
    "dj-rest-auth>=7.2.0",
    "requests>=2.33.1",
    "cryptography>=47.0.0",
    "django-cors-headers>=4.9.0",
    "celery>=5.4.0",
    "redis>=8.0.1",
    "argon2-cffi>=25.1.0",
    "django-axes>=8.3.1",
]

[dependency-groups]
dev = [
    "attrs==25.4.0",
    "coverage==7.14.3",
    "factory_boy==3.3.3",
    "Faker==40.4.0",
    "freezegun==1.5.5",
    "iniconfig==2.3.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "packaging==26.0",
    "pluggy==1.6.0",
    "Pygments==2.19.2",
    "pyinstrument==5.1.2",
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "referencing==0.37.0",
    "rpds-py==2026.5.1",
]

[tool.uv]
package = false
